--- a/src/components/routers/Routes.css
+++ b/src/components/routers/Routes.css
@@ -1,7 +1,7 @@
 .home_content {
   position: absolute;
   height: 100%;
-  width: calc(100%-240px);
+  width: calc(100% - 240px);
   left: 240px;
-  padding: 10px;
+  padding: 20px 30px;
 }
